# dolphin-gang-tour

./: .editorconfig  .gitignore  AUTHORS.md  AUTHORS_EN.md  CHANGELOG.md  DOWNLOADS.md  DOWNLOADS_EN.md  LICENSE  README.md  README_EN.md  WINDOWS_HANDOFF.md  audit-report.html  legal-compliance-report.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  downloads-manifest.json
.github/release-notes/: v1.2.0-beta.0.md  v2.0.0-beta.0.md
.github/workflows/: release.yml
docs/: USER-GUIDE.md
docs/handoff/: firmware-engineer.md  hardware-engineer.md
docs/overviews/: phase-3-overview.html
docs/prd/: lucy-mvp-v1.2.1.html
dolphintutor-dev-story/: dolphintutor-dev-story.html
dolphintutor-risk-analysis/: dolphintutor-risk-analysis.html
dolphintutor-risk-analysis/assets/: charts.js
flipper-ai-tutor/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  THIRDPARTY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
flipper-ai-tutor/.github/: PULL_REQUEST_TEMPLATE.md
flipper-ai-tutor/LICENSES/: GPL-2.0.txt
flipper-ai-tutor/src/: App.tsx  (+1 more)
flipper-ai-tutor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
flipper-ai-tutor/src-tauri/android-patches/: FlipperUsbManager.kt  MainActivity.kt
flipper-ai-tutor/src-tauri/capabilities/: default.json
flipper-ai-tutor/src-tauri/src/: lib.rs  main.rs
flipper-ai-tutor/src-tauri/src/ai/: mod.rs  prompt.rs  router.rs  sanitizer.rs
flipper-ai-tutor/src-tauri/src/device/: detector.rs  driver.rs  mod.rs  sd_card.rs  virtual_flipper.rs
flipper-ai-tutor/src-tauri/src/diagnostics/: mod.rs
flipper-ai-tutor/src-tauri/src/firmware/: flasher.rs  mod.rs
flipper-ai-tutor/src-tauri/src/import/: badusb_guard.rs  mod.rs  pipeline.rs
flipper-ai-tutor/src-tauri/src/rpc/: mod.rs  protocol.rs  stream.rs
flipper-zero-official-open-source/: flipper-zero-official-open-source.html
flipperzero-ai-tutor-prd/: flipperzero-ai-tutor-prd.html
flipperzero-resources/: flipperzero-resources.html
hacker-products-guide/: hacker-products-guide.html
hardware/: README.md  TODO.md
lucy/: .gitignore  README.md  STATUS.md  phase-1-overview.html  phase-2-overview.html
lucy-desktop-p5-overview/: lucy-desktop-p5-overview.html
lucy-desktop-p6-overview/: lucy-desktop-p6-overview.html
lucy-desktop-p7-overview/: lucy-desktop-p7-overview.html
lucy-dev-roadmap/: lucy-dev-roadmap.html
lucy/desktop/src-tauri/: Cargo.toml  tauri.conf.json
lucy/desktop/src-tauri/src/: app_state.rs  config.rs  firmware.rs  freeze.rs  logger.rs  main.rs  region.rs
lucy/desktop/src-tauri/src/ai/: mod.rs  pipeline.rs  sanitizer.rs
lucy/desktop/src-tauri/src/device/: detector.rs  transport_manager.rs  usb_transport.rs  virtual_dev.rs
lucy/desktop/src-tauri/src/device/modules/: badusb.rs  gpio.rs  ir.rs  mod.rs  nfc.rs
lucy/desktop/src-tauri/src/security/: badusb_guard.rs
project-status-audit/: project-status-audit.html
scripts/: gen-release-downloads.py
src/: App.tsx  index.css
(+145 files in other folders)
